Remove gutter for correct horizontal alignment

--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,10 @@ html, body {
     font-size: 24px;
 }
 
+.row {
+    --bs-gutter-x: 0;
+}
+
 button {
     width: 50vw;
     border: 2px solid #dddddd;
